--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-credit-cards": "^0.8.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-images-uploading": "^3.1.3",
     "react-input-mask": "^2.0.4",
     "react-loader-spinner": "^4.0.0",
     "react-router-dom": "^5.2.0",
